--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
-    "expo": "~41.0.0",
+    "expo": "^41.0.0",
     "expo-app-loading": "^1.0.3",
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
