--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": "^41.0.0",
     "expo-app-loading": "^1.0.3",
+    "expo-image-picker": "~10.1.3",
     "expo-linear-gradient": "~9.1.0",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
